# Fastapi_Supabase_Template

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/versions/: 20260119_change_user_id_to_uuid.py  bc1dce181450_initial_tables.py
app/: main.py
app/core/: config.py  crud.py  dependencies.py  security.py
app/db/: base.py  session.py  supabase.py
app/models/: todo.py  users.py
app/routes/: auth.py  todo.py  users.py
app/schemas/: todo.py  users.py
app/services/: database.py  user_service.py
