[project]
name = "technical-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "fastapi-users[asyncpg,sqlalchemy2]>=15.0.3",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "supabase>=2.27.1",
    "uvicorn>=0.40.0",
    "alembic>=1.18.1",
]
